commit changes to index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>FamiPress</title>
     <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/css/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="./assets/css/fonts.css">
 </head>
 <body>
     <script src="./assets/js/bootstrap.bundle.min.js"></script>
