--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FamiPress</title>
+    <link rel="shortcut icon" href="./assets/images/logo/logo.png">
     <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/css/bootstrap-icons.min.css">
     <link rel="stylesheet" href="./assets/css/fonts.css">
